# random-ml-models

./: .pre-commit-config.yaml  README.md  pyproject.toml
nbs/: decision-tree.ipynb  gradient-boosted-trees.ipynb
src/: decisiontree.py  gradientboostedtrees.py
