[tool.poetry]
name = "random-ml-models"
version = "0.0.1"
description = ""
authors = ["eschmidt42 <11818904+eschmidt42@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10,<4.0"
jax = {extras = ["cpu"], version = "^0.3.21"}
torch = {version = "^1.12.1+cpu", source = "torch"}
seaborn = "^0.12.0"
rich = "^12.6.0"
scikit-learn = "^1.1.2"
equinox = "^0.8.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = false


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
